major change on the home

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -41,7 +41,7 @@
     </a>
     </li>
     <li>
-    <a href="#" class="twitter">
+    <a href="https://twitter.com/pizzlemovement_" class="twitter">
     <i class="fa fa-twitter"></i>
     </a>
     </li>
@@ -51,7 +51,7 @@
     </a>
     </li>
     <li>
-    <a href="#" class="insta">
+    <a href="https://instagram.com/pizzlemovement" class="insta">
     <i class="fa fa-instagram"></i>
     </a>
     </li>
