--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ceviche+One&display=swap');
+
 #header{
-    width: 42%;
+    width: 30%;
+  margin-top: 20px;
+  backdrop-filter: blur(5px);
+}
+
+.pp{
+    font-size: 30px;
+    font-family: 'Ceviche One', cursive;
+    font-weight: 600;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.mm{
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 600;
+    position: absolute;
+    left: 43%;
+    margin-top: -20px;
 }
 
 .about_area .about_info h3 {
@@ -108,6 +129,20 @@ a {
     max-width: 100%;
 }
 
+div.scrollmenu{
+    overflow: auto;
+    white-space: nowrap;
+}
+
+div.scrollmenu{
+    overflow: auto;
+    white-space: nowrap;
+}
+
+#slider{
+    width: 50%;
+}
+
 
 /* 320px — 480px
 //  SSmall phone */
@@ -115,12 +150,30 @@ a {
 
 @media (max-width: 480px) {
 
+    .pp{
+        font-size: 50px;
+        font-family: 'Ceviche One', cursive;
+        font-weight: 600;
+        margin-top: 10px;
+        text-align: center;
+        color: red;
+    }
+    
+    .mm{
+        font-size: 30px;
+        font-family: 'Times New Roman', Times, serif;
+        font-weight: 600;
+        position: absolute;
+        left: 26%;
+        margin-top: -20px;
+    }
+
     .music_area{
         display: none;
     }
     
    #header{
-       width: 100%;
+       width: 50%;
    }
 
    .phh{
@@ -130,9 +183,17 @@ a {
    }
 
    .phhss{
-       margin-top: 20px;
+       
        font-size: 18px;
        padding: 3px;
+   }
+
+   .spec{
+       background-color: red;
+       color: white;
+       padding: 20px;
+       text-align: center;
+       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    }
 
    .hover_inner span {
@@ -147,7 +208,7 @@ a {
    }
 
    p{
-       color: seagreen;
+       color: white;
        font-family: 'Roboto', sans-serif;
        padding: 2px 2px;
        font-size: 20px;
@@ -173,4 +234,23 @@ a {
    .thumb img{
        justify-content: center;
    }
+
+
+
+   #slider{
+    width: 100%;
+}
+
+#shirt{
+    padding: 10px;
+    text-align: center;
+    font-size: 15px;
+    font-family: monospace;
+}
+
+#cart{
+    width: 50%;
+    margin-left: 24%;
+}
+
 }
