--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -69,6 +69,15 @@ a {
     color: #482ff7;
 }
 
+.side{
+    max-width:200px;
+   background:rgba(0, 0, 0, 0.75);
+   margin:40px auto;
+   padding:10px 0px 20px 0px;
+   border:1px solid #111;
+   border-radius:4px;
+   box-shadow:0px 4px 5px rgba(0, 0, 0, 0.75);
+}
 
 
 
