--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -88,7 +88,13 @@
             <div class="sidenav" [hidden]="isShowDiv">
               <ul>
                 <li style="color: aqua;">Home</li>
+                <li style="color: aqua;">Home</li>
+                <li style="color: aqua;">Home</li>
+                <li style="color: aqua;">Home</li>
+                <li style="color: aqua;">Home</li>
               </ul>
             </div>
+
+
         </nav>
 </header>
