--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <app-navbar></app-navbar>
-    <div class="words word-1 pp">
+    <!-- <div class="words word-1 pp">
         <span>P</span>
         <span>I</span>
         <span>Z</span>
@@ -8,12 +8,12 @@
         <span>L</span>
         <span>E</span>
         <span>...</span>
-      </div>
+      </div> -->
 <div class="text-center">
-    <!-- <h3 class="pp words">PIZZLE</h3> -->
+    <h3 class="pp words">PIZZLE</h3>
 
     <span class="mm">MOVEMENT</span>
-  <img src="assets/ye.JPG" class="img-fluid" id="header" alt="" >
+  <img src="assets/top.png" class="img-fluid" id="header" alt="" >
   
 </div>
 
