--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,141 +1,73 @@
-.header{
-    /* border-bottom: 1px solid #E2E8F0; */
-    border-bottom: 1px solid #ee3d3d;
+.one{
+    width: 40%;
+}
+
+.navbar-brand{
+    width: 50%;
+}
+
+.nav-link{
+    font-family: 'Pangolin', cursive;
+}
+
+@media only screen and (max-width: 1200px) {
+
+    .one{
+        width: 40%;
+    }
+
+    #navbarSupportedContent{
+        height: 60%;
+        width: 92%;
+        font-family: Montserrat;
+        
+    font-size: 16px;     
+   background-image: linear-gradient(to right,#bfd7e9,#5f9dc9,#57a0d3,#73c2fb);
+    border: none;
+    border-radius: 10px;
+    position: fixed;
+    z-index: 1;
+    top: 23%;
+    left: 11px;
+    opacity: 0.9;
+    overflow-x: hidden;
+    text-align: center;
+    transform: translate(-155px, 0) scale(0.4);
+    animation: animate .8s forwards;
    
-}
-#logo{
-    max-width: 5%;
-}
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 0.5rem;
-}
-
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-.hamburger {
-    display: none;
-}
-
-.bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: #101010;
-}
-
-
-.nav-menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav-item {
-    margin-left: 2rem;
-    position: relative;
-    /* left: 100%; */
-    margin-top: -13%;
-   
-}
-
-.nav-link {
-    font-size: 18px;
-    font-weight: 400;
-    color: red;
+    }
     
+    @keyframes animate{
+        40%{
+            transform: translate(50px, 0) scale(.7);
+            opacity: 0.9;
+            color: indianred;
+        }
+        60%{
+            color: blue;
+        }
+        80%{
+            transform: translate(0) scale(0.2);
+            opacity: 0.9;
+        }
+        100%{
+            transform: translate(0) scale(1 );
+            opacity: 0.9;
+        }
+    }
     
-}
-
-.nav-link:hover{
+    #navbarSupportedContent a{
     color: white;
-}
-
-.nav-logo {
-    font-size: 1.1rem;
-    font-weight: 500;
-    color: #482ff7;
-}
-
-.side{
-    max-width:200px;
-   background:rgba(0, 0, 0, 0.75);
-   margin:40px auto;
-   padding:10px 0px 20px 0px;
-   border:1px solid #111;
-   border-radius:4px;
-   box-shadow:0px 4px 5px rgba(0, 0, 0, 0.75);
-}
-
-
-
-
-@media only screen and (max-width: 480px) {
-    .nav-menu {
-        position: fixed;
-        left: -100%;
-        top: 5rem;
-        flex-direction: column;
-        background-color: #fff;
-        width: 100%;
-        border-radius: 10px;
-        text-align: center;
-        transition: 0.3s;
-        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+    padding: 15px;
+    
     }
 
-    .nav-menu.active {
-        left: 0;
-    }
-
-    .nav-item {
-        margin: 2.5rem 0;
-    }
-
-    #logo {
-       max-width: 25%;
-    }
-
-    .hamburger {
-        display: block;
-        cursor: pointer;
-        background-color: #f85555;
-        position: relative;
-        left: 90%;
-        margin-top: -28%;
-
-    }
-
-
-    .hamburger.active .bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    .hamburger.active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-
-    .hamburger.active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
-
-
-    .header{
-        /* border-bottom: 1px solid #E2E8F0; */
-        border-bottom: none;
+    #navbarSupportedContent a:hover {
+        color: goldenrod;
        
+        padding: 20px; 
+        font-size: 19px;       
     }
-
-}
+        
+    }
