--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,100 +1,41 @@
-<!-- <nav>
-    <ul id="navigation">
-    <li><a class="active" href="index.html">home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="track.html">tracks</a></li>
-    <li><a href="#">blog <i class="ti-angle-down"></i></a>
-    <ul class="submenu">
-    <li><a href="blog.html">blog</a></li>
-    <li><a href="single-blog.html">single-blog</a></li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">
+      <img src="assets/jo.PNG" alt="" class="mx-auto one"> 
+     
+    </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/init">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/gallery">Gallery</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/story">Our Story</a>
+        </li>
+       
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/rsvp">RSVP</a>
+        </li>
+      
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/google-map">Getting There</a>
+        </li>
+
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/giftregistry">Gift Registry</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/vendorlist">Vendors List</a>
+        </li>
+       
     </ul>
-    </li>
-    <li><a href="#">pages <i class="ti-angle-down"></i></a>
-    <ul class="submenu">
-    <li><a href="elements.html">elements</a></li>
-    </ul>
-    </li>
-    <li><a href="contact.html">Contact</a></li>
-    </ul>
-    </nav> -->
-
-
-
-
-      <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <img src="assets/wo.jpg" alt="" width="30" height="24">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav text-center">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
-
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
-          </div>
-        </div>
-      </nav> -->
-
-
-      <header class="header">
-        <nav class="navbar">
-            <a href="#" class="nav-logo">
-              <img src="assets/wo.jpg" alt="" class="img-fluid" id="logo">
-               </a>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
-            </ul>
-            <div class="hamburger" (click)="toggleDisplayDiv()">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-
-
-            <div class="sidenav" [hidden]="isShowDiv">
-              <ul>
-                <li style="color: aqua;">Home</li>
-                <li style="color: aqua;">Home</li>
-                <li style="color: aqua;">Home</li>
-                <li style="color: aqua;">Home</li>
-                <li style="color: aqua;">Home</li>
-              </ul>
-            </div>
-
-
-        </nav>
-</header>
+    
+  </div>
+</nav> 
