--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="col-xl-7 col-md-6">
         <div class="about_info">
-        <h3 style="font-family: 'Pangolin', cursive;" class="phh">ABOUT</h3>
+        <h3 style="font-family: 'Bebas Neue', cursive;" class="phh">ABOUT</h3>
         <p class="phhss"> Pizzlemovement is a collective and social club of young multi disciplinary creatives in Nigeria. The movement was started casually by Pheropizzle and his friends in secondary school in 2017 who shared similar interests in music,fashion,partying and lifestyle.
             Although it started has a music group,Pizzle Movement has evolved into a social club of young  creatives and visionary youths who share various similar interests.
             It members are also known for their resilience and ambition as the slogan goes “They said we could not do it but we did it anyways” (SIGHS)
@@ -55,7 +55,7 @@
         </div>
         <!-- Youtube Section -->
 
-        <div class="youtube_video_area">
+        <!-- <div class="youtube_video_area">
             <div class="container-fluid p-0">
             <div class="row no-gutters">
             <div class="col-xl-3 col-lg-3 col-md-6">
@@ -107,8 +107,8 @@
             </a>
             </div>
             <div class="hover_inner">
-            <!-- <span>New York Show-2018</span>
-            <h3><a href="#">Shadows of My Dream</a></h3> -->
+             <span>New York Show-2018</span>
+            <h3><a href="#">Shadows of My Dream</a></h3> 
             </div>
             </div>
             </div>
@@ -133,6 +133,17 @@
             </div>
             </div>
             </div>
+            </div> -->
+
+            <div class="music">
+                <div class="section_title text-center mb-65">
+                    <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive; margin-bottom: 5%; margin-top: 5%;">Music</h3>
+                    </div>
+               <ul>
+                   <li> <img src="assets/eee.jpg" class="img-fluid" id="oneway" alt=""></li>
+                   <li> <img src="assets/spot.png" class="img-fluid" id="oneway" alt=""> </li>
+                   <li> <img src="assets/youtu.png" class="img-fluid"id="onewayy" alt=""></li>
+               </ul>
             </div>
 
             <!--Latest Track section -->
@@ -142,7 +153,7 @@
                 <div class="row">
                 <div class="col-xl-12">
                 <div class="section_title text-center mb-65">
-                <h3 style="color: rgb(218, 50, 50);   font-family: 'Pacifico', cursive; margin-bottom: 5%; margin-top: 5%;">Latest Tracks</h3>
+                <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive; margin-bottom: 5%; position: absolute; top: 21%;">Latest Tracks</h3>
                 </div>
                 </div>
                 </div>
@@ -213,9 +224,18 @@
                     <div class="row">
                     <div class="col-xl-12">
                     <div class="text text-center">
-                    <h3 style="color: rgb(218, 50, 50);   font-family: 'Pacifico', cursive;  margin-top: 3%; font-weight: 800;">MERCH</h3>
-                    <!-- <img src="assets/yesk.JPG" class="go" alt=""> -->
-                    <div class="card bg-dark">
+                    <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive;  margin-top: 3%; font-weight: 800;">MERCH</h3>
+                     <img src="assets/ye.JPG" class="go" alt=""> 
+                     <p id="shirt">
+                        Pizzlemovement Regalia T-shirt
+                     </p>
+
+                     <span id="cart">Shop Now </span>
+
+                     <br>
+
+                     
+                    <!-- <div class="card bg-dark">
                         <p id="shirt">
                             Pizzlemovement Regalia T-shirt are in stock now!
                         </p>
@@ -229,7 +249,7 @@
                         </div>
                         <button class="btn btn-danger mt-3" id="cart">   <i id="wedd" class="large material-icons">add_shopping_cart</i> </button>
                         <p style="margin-top:5px; color: red;"> <<<<< >>>>></p>
-                    </div>
+                    </div> -->
                     <a class="boxed-btn3" href="contact.html" style="color: rgb(218, 50, 50);   font-family: 'Pacifico', cursive; font-size: 30px;">Contact Me</a>
                     </div>
                     </div>
