--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -22,7 +22,7 @@
         font-family: Montserrat;
         
     font-size: 16px;     
-   background-image: linear-gradient(to right,#bfd7e9,#5f9dc9,#57a0d3,#73c2fb);
+   background-image: linear-gradient(to right,#1c1e1f,#586670,#df8f7c,#f1444d);
     border: none;
     border-radius: 10px;
     position: fixed;
