--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -250,7 +250,7 @@
                         <button class="btn btn-danger mt-3" id="cart">   <i id="wedd" class="large material-icons">add_shopping_cart</i> </button>
                         <p style="margin-top:5px; color: red;"> <<<<< >>>>></p>
                     </div> -->
-                    <a class="boxed-btn3" href="contact.html" style="color: rgb(218, 50, 50);   font-family: 'Pacifico', cursive; font-size: 30px;">Contact Me</a>
+                    <a class="boxed-btn3" href="contact.html" style="color: rgb(218, 50, 50);   font-family: 'Pacifico', cursive; font-size: 30px; margin-top: 10%;">Contact Me</a>
                     </div>
                     </div>
                     </div>
