rest will be done later

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,6 +15,7 @@
     <span class="mm">MOVEMENT</span>
   <img src="assets/top.png" class="img-fluid" id="header" alt="" >
   
+  <span id="scroll">Scroll down</span>
 </div>
 
     <!-- About section  -->
@@ -24,7 +25,7 @@
         <div class="row align-items-center">
         <div class="col-xl-5 col-md-6">
         <div class="about_thumb">
-        <img class="img-fluid" src="assets/1.jpg" alt="" data-pagespeed-url-hash="1835074714" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+        <img class="img-fluid" src="assets/ola2.jpg" alt="" data-pagespeed-url-hash="1835074714" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" style="margin-top: 40px;">
         </div>
         </div>
         <div class="col-xl-7 col-md-6">
@@ -137,13 +138,13 @@
 
             <div class="music">
                 <div class="section_title text-center mb-65">
-                    <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive; margin-bottom: 5%; margin-top: 5%;">Music</h3>
+                    <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive; font-size: 50px; margin-bottom: 5%; margin-top: 10%;">Music</h3>
                     </div>
-               <ul>
-                   <li> <img src="assets/eee.jpg" class="img-fluid" id="oneway" alt=""></li>
-                   <li> <img src="assets/spot.png" class="img-fluid" id="oneway" alt=""> </li>
-                   <li> <img src="assets/youtu.png" class="img-fluid"id="onewayy" alt=""></li>
-               </ul>
+
+                    <img src="assets/eee.jpg" class="img-fluid" id="oneway" alt="">
+                    <img src="assets/spot.png" class="img-fluid" id="oneways" alt="">
+                    <img src="assets/youtu.png" class="img-fluid"id="onewayy" alt="">
+              
             </div>
 
             <!--Latest Track section -->
@@ -224,7 +225,7 @@
                     <div class="row">
                     <div class="col-xl-12">
                     <div class="text text-center">
-                    <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive;  margin-top: 3%; font-weight: 800;">MERCH</h3>
+                    <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive;  margin-top: 3%; font-size: 50px; font-weight: 800;">MERCH</h3>
                      <img src="assets/ye.JPG" class="go" alt=""> 
                      <p id="shirt">
                         Pizzlemovement Regalia T-shirt
@@ -233,6 +234,9 @@
                      <span id="cart">Shop Now </span>
 
                      <br>
+
+                     
+
 
                      
                     <!-- <div class="card bg-dark">
@@ -250,13 +254,34 @@
                         <button class="btn btn-danger mt-3" id="cart">   <i id="wedd" class="large material-icons">add_shopping_cart</i> </button>
                         <p style="margin-top:5px; color: red;"> <<<<< >>>>></p>
                     </div> -->
-                    <a class="boxed-btn3" href="contact.html" style="color: rgb(218, 50, 50);   font-family: 'Pacifico', cursive; font-size: 30px; margin-top: 10%;">Contact Me</a>
+                    <!-- <a class="boxed-btn3" href="contact.html" style="color: rgb(218, 50, 50);  
+                     font-family: 'Bebas Neue', cursive; 
+                     font-size: 50px; 
+                     position: absolute;
+                     top: 60%;">Contact Me</a> -->
                     </div>
                     </div>
                     </div>
                     </div>
                     </div>
 
+</div>
+
+<div class="placad text-center">
+    <img src="assets/be1.PNG" class="img-fluid" alt="">
+    <h1 class="join">JOIN THE MOVEMENT</h1>
+
+    <p>
+        Join the Pizzlemovement family to recieve the latest updates and exclusives from Pizzlemovement(Members only)
+    </p>
+
+    <span id="cart">JOIN US </span>
+</div>
+
+
+
+<div>
+    <h3 class="contactt">Contact Me</h3>
 </div>
 
 <app-footer></app-footer>
