--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,24 +16,24 @@
         <a class="nav-link" routerLink="/gallery">Gallery</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/story">Our Story</a>
+          <a class="nav-link" routerLink="/story">Music</a>
         </li>
        
         <li class="nav-item">
-          <a class="nav-link" routerLink="/rsvp">RSVP</a>
+          <a class="nav-link" routerLink="/rsvp">Awards</a>
         </li>
       
         <li class="nav-item">
-          <a class="nav-link" routerLink="/google-map">Getting There</a>
+          <a class="nav-link" routerLink="/google-map">Contact Us</a>
         </li>
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
           <a class="nav-link" routerLink="/giftregistry">Gift Registry</a>
         </li>
 
         <li class="nav-item">
           <a class="nav-link" routerLink="/vendorlist">Vendors List</a>
-        </li>
+        </li> -->
        
     </ul>
     
