--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,6 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 
+#scroll{
+  position: absolute;
+  top: 47%;
+  right: 39%;
+  opacity: 0.5;
+}
+
 /* .words {
    
     font-size: 0;
@@ -131,13 +138,31 @@ a {
     transform: translate(-50%, -50%); */
 }
 
+#oneways{
+  width: 10%;
+  position: relative;
+    left: 20%;
+}
+
 #oneway{
-  width: 20%;
+  width: 10%;
+  position: relative;
+    left: 10%;
 }
 
 #onewayy{
   width: 30%;
+  position: relative ;
+  left: 15%;
 }
+
+.contactt{
+  margin-top: 70px;
+  color: rgb(218, 50, 50);  
+  font-family: 'Bebas Neue', cursive; 
+  font-size: 50px; 
+}
+
 
 .music{
   margin-bottom: 30%;
@@ -177,8 +202,16 @@ a {
     /* margin-bottom: 13%; */
 
 
-
+.placad{
+  background: red;
+  width: 100%;
+  margin-top: 40px;
+}
    
+.join{
+  font-size: 46px;
+  padding: 10px;
+}
 
 .video {
     margin-top: -13%;
@@ -226,13 +259,33 @@ div.scrollmenu{
 
 @media (max-width: 480px) {
 
+  #oneways{
+    width: 20%;
+    position: relative;
+      left: 20%;
+  }
+  
+  #oneway{
+    width: 20%;
+    position: relative;
+      left: 10%;
+  }
+  
+  #onewayy{
+    width: 50%;
+    position: relative ;
+    left: 15%;
+  }
+
     .pp{
         font-size: 50px;
         font-family: 'Ceviche One', cursive;
+        /* font-family: 'Bebas Neue', cursive; */
         font-weight: 600;
         margin-top: 10px;
         text-align: center;
-        color: red;
+        /* color: red; */
+        color: white;
     }
     
     .mm{
@@ -241,7 +294,7 @@ div.scrollmenu{
         font-weight: 600;
         position: absolute;
         left: 26%;
-        margin-top: -20px;
+        margin-top: -27px;
     }
 
     .music_area{
@@ -268,6 +321,7 @@ div.scrollmenu{
        background-color: red;
        color: white;
        padding: 20px;
+       margin-bottom: 40px;
        text-align: center;
        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    }
@@ -326,12 +380,12 @@ div.scrollmenu{
 }
 
 #cart{
-    width: 50%;
+    
    
     border-bottom: 2px solid white;
     /* background: #615CFD; */
- background: black;
- color: white;
+    background: black;
+   color: white;
     padding: 10px;
     margin-bottom: 30%;
 
