--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -69,19 +69,19 @@
     <div class="col-xl-7 col-md-6">
     <p class="copy_right">
     
-    Copyright ©<script>document.write(new Date().getFullYear());</script>2021 All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="" target="_blank">Meeday</a>
+    Copyright ©<script>document.write(new Date().getFullYear());</script>2021 All rights reserved.
     
     </p>
     </div>
     <div class="col-xl-5 col-md-6">
     <div class="footer_links">
-    <ul>
+    <!-- <ul>
     <li><a style="color: rgb(218, 50, 50);" href="#">home</a></li>
     <li><a style="color: rgb(218, 50, 50);" href="#">about</a></li>
     <li><a style="color: rgb(218, 50, 50);" href="#">tracks</a></li>
     <li><a style="color: rgb(218, 50, 50);" href="#">blog</a></li>
     <li><a style="color: rgb(218, 50, 50);" href="#">contact</a></li>
-    </ul>
+    </ul> -->
     </div>
     </div>
     </div>
