--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -272,16 +272,17 @@
     <h1 class="join">JOIN THE MOVEMENT</h1>
 
     <p>
-        Join the Pizzlemovement family to recieve the latest updates and exclusives from Pizzlemovement(Members only)
+        Join the Pizzlemovement family to recieve the latest updates and exclusives from Pizzlemovement (Members only)
     </p>
 
-    <span id="cart">JOIN US </span>
+    <span id="cartt">JOIN US </span>
 </div>
 
 
 
 <div>
-    <h3 class="contactt">Contact Me</h3>
+    <!-- <h3 class="contactt">Contact Me</h3> -->
+    <h3 class="contactt">FOLLOW US</h3>
 </div>
 
 <app-footer></app-footer>
