--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -305,6 +305,8 @@ div.scrollmenu{
     
    #header{
        width: 50%;
+       transform: translate(-155px, 0) scale(0.4);
+        animation: animate .10s forwards;
    }
 
    .phh{
@@ -320,7 +322,7 @@ div.scrollmenu{
    }
 
    .spec{
-       background-color: red;
+       background-color:  rgb(218, 50, 50);
        color: white;
        padding: 20px;
        margin-bottom: 40px;
@@ -330,7 +332,7 @@ div.scrollmenu{
 
    .hover_inner span {
        font-size: 18px;
-       color: red;
+       color: rgb(218, 50, 50);
        font-weight: 300;
        font-family: 'Times New Roman', Times, serif;
    }
@@ -378,7 +380,8 @@ div.scrollmenu{
     text-align: center;
     font-size: 15px;
     font-family: monospace;
-    color: red;
+    /* color: red; */
+    color: rgb(218, 50, 50);
 }
 
 #cart{
