--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -66,10 +66,26 @@
     }
 
     #navbarSupportedContent a:hover {
-        color: rgb(218, 32, 32);
+        background: rgb(218, 50, 50);
        
         padding: 20px; 
         font-size: 40px;       
+    }
+
+
+    .navbar-dark .navbar-toggler {
+        /* color: rgba(255,255,255,.55); */
+        color: white;
+        /* border-color: rgba(255,255,255,.1); */
+        /* background: rgb(218, 50, 50); */
+        background: rgb(218, 50, 50);
+        border: 1px solid rgb(218, 50, 50);;
+    }
+
+    .bg-dark {
+        --bs-bg-opacity: 0;
+        background-color: rgba(33,37,41,var(--bs-bg-opacity))!important;
+        background-color: rgba(var(--bs-dark-rgb),var(--bs-bg-opacity))!important;
     }
         
     }
