--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -154,7 +154,7 @@
                 <div class="row">
                 <div class="col-xl-12">
                 <div class="section_title text-center mb-65">
-                <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive; margin-bottom: 5%; position: absolute; top: 21%;">Latest Tracks</h3>
+                <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive; margin-top: -16%;  top: 18%;">Latest Tracks</h3>
                 </div>
                 </div>
                 </div>
@@ -223,15 +223,16 @@
                 <div class="contact_rsvp">
                     <div class="container">
                     <div class="row">
-                    <div class="col-xl-12">
-                    <div class="text text-center">
+                    <div class="col-md-12">
+                    <div class=" text text-center">
                     <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive;  margin-top: 3%; font-size: 50px; font-weight: 800;">MERCH</h3>
                      <img src="assets/ye.JPG" class="go" alt=""> 
+                     
                      <p id="shirt">
                         Pizzlemovement Regalia T-shirt
                      </p>
 
-                     <span id="cart">Shop Now </span>
+                     <span class="cart">Shop Now </span>
 
                      <br>
 
@@ -271,7 +272,7 @@
     <img src="assets/be1.PNG" class="img-fluid" alt="">
     <h1 class="join">JOIN THE MOVEMENT</h1>
 
-    <p>
+    <p class="joinp"> 
         Join the Pizzlemovement family to recieve the latest updates and exclusives from Pizzlemovement (Members only)
     </p>
 
