--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,7 +13,7 @@
     <button class="btn btn-info btn-sm mt-3 small" type="submit">Subscribe</button>
     </form>
     </div>
-    <p class="sub_text">Esteem spirit temper too say adieus who direct esteem esteems luckily.</p>
+    <!-- <p class="sub_text">Esteem spirit temper too say adieus who direct esteem esteems luckily.</p> -->
     </div>
     </div>
     <div class="col-xl-5 col-md-5 offset-xl-1">
@@ -22,11 +22,11 @@
     Contact Me
     </h3>
     <ul>
-    <li ><a style="color: rgb(218, 50, 50);" href="#">Pheropizzle@support.com
+    <li ><a style="color: rgb(218, 50, 50); font-size: 17px;" href="#">Pheropizzle@support.com
     </a></li>
-    <li><a style="color: rgb(218, 50, 50);" href="#">+10 873 674 6782
+    <li><a style="color: rgb(218, 50, 50); font-size: 17px;" href="#">+10 873 674 6782
     </a></li>
-    <li><a style="color: rgb(218, 50, 50);" href="#">600/D, Green road, Kings Garden Ibadan</a></li>
+    <li><a style="color: rgb(218, 50, 50); font-size: 17px;" href="#">600/D, Green road, Kings Garden Ibadan</a></li>
     </ul>
     <div class="socail_links">
     <ul>
