--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -138,12 +138,22 @@
 
             <div class="music">
                 <div class="section_title text-center mb-65">
-                    <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive; font-size: 50px; margin-bottom: 5%; margin-top: 10%;">Music</h3>
+                    <h3 style="color: #D30000;   font-family: 'Bebas Neue', cursive; font-size: 50px; margin-bottom: 5%; margin-top: 10%;">Music</h3>
                     </div>
 
-                    <img src="assets/eee.jpg" class="img-fluid" id="oneway" alt="">
-                    <img src="assets/spot.png" class="img-fluid" id="oneways" alt="">
-                    <img src="assets/youtu.png" class="img-fluid"id="onewayy" alt="">
+                    <a href="">
+                        <img src="assets/mmm.png" class="img-fluid" id="oneway" alt="">
+                    </a>
+                    
+
+                    <a href="https://open.spotify.com/artist/3ndnDOBnl6lNuGGxWXHWo5?si=ULvgkt-eQfGy7jRCrUA97A">
+                         <img src="assets/spot.png" class="img-fluid" id="oneways"  alt="">
+                    </a>
+                   
+                    <a href="https://www.youtube.com/channel/UCCZ8nXiotAZgxhnojj-VFyg">
+                        <img src="assets/youtu.png" class="img-fluid"id="onewayy" alt="">
+                    </a>
+                    
               
             </div>
 
@@ -154,7 +164,7 @@
                 <div class="row">
                 <div class="col-xl-12">
                 <div class="section_title text-center mb-65">
-                <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive; margin-top: -16%;  top: 18%;">Latest Tracks</h3>
+                <h3 style="color: #D30000;   font-family: 'Bebas Neue', cursive; margin-top: -16%;  top: 18%;">Latest Tracks</h3>
                 </div>
                 </div>
                 </div>
@@ -225,7 +235,7 @@
                     <div class="row">
                     <div class="col-md-12">
                     <div class=" text text-center">
-                    <h3 style="color: rgb(218, 50, 50);   font-family: 'Bebas Neue', cursive;  margin-top: 3%; font-size: 50px; font-weight: 800;">MERCH</h3>
+                    <h3 style="color: #D30000;   font-family: 'Bebas Neue', cursive;  margin-top: 3%; font-size: 50px; font-weight: 800;">MERCH</h3>
                      <img src="assets/ye.JPG" class="go" alt=""> 
                      
                      <p id="shirt">
