--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -7,15 +7,17 @@
 
 			<div class="profile-image">
 
-				<img src="https://images.unsplash.com/photo-1513721032312-6a18a42c8763?w=152&h=152&fit=crop&crop=faces" alt="">
-
+				<img src="assets/IMG_9785.jpg" alt="" class="img-fluid">
+                <!-- <img src="https://images.unsplash.com/photo-1513721032312-6a18a42c8763?w=152&h=152&fit=crop&crop=faces" alt=""> -->
 			</div>
 
 			<div class="profile-user-settings">
 
 				<h1 class="profile-user-name">Phero Pizzle</h1>
-
-				<button class="btn btn-primary profile-edit-btn">Follow</button>
+                <a href="https://www.instagram.com/pheropizzle/" style="color: white;">
+                  <button class="btn btn-primary profile-edit-btn">Follow</button>  
+                </a>
+				
 
 				<button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
 
