--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,23 +7,22 @@
   padding: 10px;
 }
 
-
 .joinp{
   font-size: 27px;
   font-family: 'Times New Roman', Times, serif;
 }
 
-
-
 .placad{
-  background: red;
+  background:#D30000;
   width: 100%;
   margin-top: 40px;
-  height: 257vh;
+  height: 252vh;
 }
+
+
 .cart{
      border-bottom: 2px solid white;
-      background: red;
+      background: #D30000;
       color: white;
       border-radius: 10px;
       /* width: 60%; */
@@ -37,12 +36,12 @@
   font-size: 30px;
   font-family: monospace;
   /* color: red; */
-  color: rgb(218, 50, 50);
+  color: #D30000;
   margin-top: 30px;
 }
 
 .spec{
-  background-color:  rgb(218, 50, 50);
+  background-color:  #D30000;
   color: white;
   padding: 20px;
   margin-top: 40px;
@@ -57,18 +56,7 @@
   opacity: 0.5;
 }
 
-/* .placad p{
-  background: red;
-  width: 100%;
-  margin-top: 40px;
-  height: 100vh;
-} */
-   
-/* .words {
-   
-    font-size: 0;
-    line-height: 1.5;
-  } */
+
   
   .words span {
     font-size: 40px;
@@ -141,7 +129,7 @@
     font-weight: 600;
     margin-bottom: 0;
     font-family: "Josefin Sans", sans-serif;
-    color: rgb(218, 50, 50);
+    color: #D30000;
 }
 
 
@@ -154,7 +142,7 @@
  .hover_inner span {
     font-size: 14px;
     font-weight: 400;
-    color: #ED1B1B;
+    color: #D30000;
     font-family: "Muli", sans-serif;
     /* -webkit-transition: 0.4s;
     -moz-transition: 0.4s;
@@ -213,7 +201,7 @@ a {
 
 .contactt{
   margin-top: 70px;
-  color: rgb(218, 50, 50);  
+  color: #D30000;  
   font-family: 'Bebas Neue', cursive; 
   font-size: 50px; 
   text-align: center;
@@ -245,21 +233,15 @@ a {
 
 .fa-play:before {
     content: "\f04b";
-    border: 1px solid red;
+    border: 1px solid #D30000;
     /* padding FONT-WEIGHT: 200; */
     padding: 20px;
-    background-color: red;
+    background-color: #D30000;
     border-radius: 100px;
     color: white;
     margin-left: 188%;
 }
-    /* position: absolute; */
- 
-    /* margin-bottom: 13%; */
-
-
    
-
 
 .video {
     margin-top: -13%;
@@ -313,7 +295,7 @@ div.scrollmenu{
   }
    
 .placad{
-  background: red;
+  background: #D30000;
   width: 100%;
   margin-top: 40px;
   height: 100vh;
@@ -385,7 +367,7 @@ div.scrollmenu{
    }
 
    .spec{
-       background-color:  rgb(218, 50, 50);
+       background-color:  #D30000;
        color: white;
        padding: 20px;
        margin-bottom: 40px;
@@ -395,7 +377,7 @@ div.scrollmenu{
 
    .hover_inner span {
        font-size: 18px;
-       color: rgb(218, 50, 50);
+       color: #D30000;
        font-weight: 300;
        font-family: 'Times New Roman', Times, serif;
    }
@@ -444,7 +426,7 @@ div.scrollmenu{
     font-size: 15px;
     font-family: monospace;
     /* color: red; */
-    color: rgb(218, 50, 50);
+    color: #D30000;
 }
 
 #cart{
