--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -27,7 +27,7 @@
     }
 
     #navbarSupportedContent a:hover {
-        background: rgb(218, 50, 50);
+        background: #D30000;
        
         padding: 20px; 
         font-size: 40px;       
@@ -94,7 +94,7 @@
     }
 
     #navbarSupportedContent a:hover {
-        background: rgb(218, 50, 50);
+        background: #D30000;
        
         padding: 20px; 
         font-size: 40px;       
@@ -106,8 +106,8 @@
         color: white;
         /* border-color: rgba(255,255,255,.1); */
         /* background: rgb(218, 50, 50); */
-        background: rgb(218, 50, 50);
-        border: 1px solid rgb(218, 50, 50);;
+        background: #D30000;
+        border: 1px solid #D30000;
     }
 
     .bg-dark {
