--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -153,8 +153,9 @@
                     <a href="https://www.youtube.com/channel/UCCZ8nXiotAZgxhnojj-VFyg">
                         <img src="assets/youtu.png" class="img-fluid"id="onewayy" alt="">
                     </a>
-                    
-              
+                    <h6>Dropping soon</h6>
+
+              <marquee> <img src="assets/hot.jpg" class="img-fluid" id="comming" alt=""> </marquee>
             </div>
 
             <!--Latest Track section -->
@@ -236,8 +237,19 @@
                     <div class="col-md-12">
                     <div class=" text text-center">
                     <h3 style="color: #D30000;   font-family: 'Bebas Neue', cursive;  margin-top: 3%; font-size: 50px; font-weight: 800;">MERCH</h3>
-                     <img src="assets/ye.JPG" class="go" alt=""> 
+                     <!-- <img src="assets/ye.JPG" class="go" alt="">  -->
                      
+                     <div class="scrollmenu">
+        
+                        <img src="assets/be1.PNG" class="img-fluid" id="tiko" alt="">
+                        <img src="assets/yesk.JPG" class="img-fluid" id="tiko" alt="">
+                        <img src="assets/1.jpg" class="img-fluid"  id="tiko" alt="">
+                        <img src="assets/ye.JPG" class="img-fluid" id="tiko" alt="">
+                    </div>
+                    <marquee>Slide Through</marquee>
+                    <p style="margin-top:5px; color: red; font-size: 15px;"><<<<< >>>>></p>
+    
+                    
                      <p id="shirt">
                         Pizzlemovement Regalia T-shirt
                      </p>
@@ -274,7 +286,9 @@
                     </div>
                     </div>
                     </div>
-                    </div>
+
+
+                 </div>
 
 </div>
 
